--- a/DbFirstTest.csproj
+++ b/DbFirstTest.csproj
@@ -71,6 +71,9 @@
     <Compile Include="Model\Component.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\DataForReport_Result.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\Model.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
